Refactoring. ChordAnalysis has more methods. HindemithChord has less methods.